apps/base/servarr/qbittorrent/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  serviceName: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - image: ghcr.io/home-operations/qbittorrent:5.0.4 # {"$imagepolicy": "flux-system:qbittorrent"}
          name: qbittorrent
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 1280Mi
            limits:
              cpu: 1000m
              memory: 1280Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data/downloads
              subPath: downloads
      volumes:
        - name: qbittorrent-conf
          configMap:
            name: qbittorrent-conf
        - name: media
          persistentVolumeClaim:
            claimName: media
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: rook-ceph-block
