apps/base/servarr/qbittorrent/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrent.needless.info`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - kind: Service
          name: qbittorrent
          port: 8080
